# openpnp-capture-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: devices.rs  stream.rs
src/: context.rs  device.rs  format.rs  lib.rs  stream.rs
sys/: Cargo.toml  build.rs  wrapper.h
sys/examples/: devices.rs  stream.rs
