[package]
name = "openpnp_capture"
description = "OpenPnP capture safe bindings"
version = "0.1.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/openpnp-capture"

[workspace]
members = [
    "sys"
]

[build-dependencies]
bindgen = "^0.53"
