[package]
name = "openpnp_capture"
description = "OpenPnP capture safe bindings"
version = "0.1.0"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/openpnp-capture"

[workspace]
members = [
    "sys"
]

[dependencies]
lazy_static = "^1.4"
openpnp_capture_sys = "^0.1"

[build-dependencies]
bindgen = "^0.53"
