[package]
name = "openpnp_capture"
description = "OpenPnP capture safe bindings"
version = "0.2.4"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository= "https://github.com/raymanfx/openpnp-capture"

[workspace]
members = [
    "sys"
]

[dependencies]
lazy_static = "^1.4"
openpnp_capture_sys = "^0.4"
