[package]
name = "openpnp_capture_sys"
description = "OpenPnP capture FFI bindings"
version = "0.2.5"
authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
edition = "2018"
license = "MIT"
repository= "https://github.com/raymanfx/openpnp-capture"

[build-dependencies]
bindgen = "^0.53"
cc = { version = "^1.0", optional = true }
cmake = { version = "^0.1", optional = true }

[features]
default = ["vendor"]
native = []
vendor = ["cc", "cmake"]
